Blog page added click "create a blog " for blog menu and 6 sample templates is present (#68)
* blog page added

* blog and blog pages added

* loaders added

* index page changes added

* prettier formatted

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                             <a class="nav-link" href="https://sahityaroy.hashnode.dev/" target="_blank">Blog</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="/blog.html" target="_blank">Create a Blog</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#course">Courses</a>
                         </li>
                         <li class="nav-item">
