--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -96,7 +96,7 @@
     <header
       class="masthead"
       style="
-        background-image: url('/images/blogimages/nathan-da-silva-k-rKfqSm4L4-unsplash.jpg');
+        background-image: url('../images/blogimages/nathan-da-silva-k-rKfqSm4L4-unsplash.jpg');
         background-size: cover;
       "
     >
