--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -44,7 +44,7 @@
     <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
       <div class="container px-4 px-lg-5">
         <a class="navbar-brand mt-1" href="../index.html">
-          <img src="/images/logo.svg" alt="" />
+          <img src="../images/logo.svg" alt="" />
         </a>
         <button
           class="navbar-toggler"
@@ -96,7 +96,7 @@
     <header
       class="masthead"
       style="
-        background-image: url('/images/blogimages/markus-spiske-iar-afB0QQw-unsplash.jpg');
+        background-image: url('../images/blogimages/markus-spiske-iar-afB0QQw-unsplash.jpg');
         background-size: cover;
       "
     >
