--- a/blog.html
+++ b/blog.html
@@ -111,7 +111,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="/blogs/blog5.html">
+              <a href="./blogs/blog5.html">
                 <img
                   class="card-img-top"
                   src="./images/blogimages/fotis-fotopoulos-DuHKoV44prg-unsplash.jpg"
@@ -138,7 +138,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="/blogs/blog2.html">
+              <a href="./blogs/blog2.html">
                 <img
                   class="card-img-top"
                   src="./images/blogimages/nathan-da-silva-k-rKfqSm4L4-unsplash.jpg"
@@ -164,7 +164,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="/blogs/blog6.html">
+              <a href="./blogs/blog6.html">
                 <img
                   class="card-img-top"
                   src="./images/blogimages/h-heyerlein-ndja2LJ4IcM-unsplash.jpg"
@@ -190,7 +190,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="/blogs/blog3.html">
+              <a href="./blogs/blog3.html">
                 <img
                   class="card-img-top"
                   src="./images/blogimages/markus-spiske-iar-afB0QQw-unsplash.jpg"
@@ -214,7 +214,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="/blogs/blog4.html">
+              <a href="./blogs/blog4.html">
                 <img
                   class="card-img-top"
                   src="./images/blogimages/ray-rui-SyzQ5aByJnE-unsplash.jpg"
