--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -15,7 +15,7 @@
       src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="icon" type="image/x-icon" href="/images/favicon/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico" />
     <!-- Google fonts-->
     <link
       href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic"
@@ -44,7 +44,7 @@
     <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
       <div class="container px-4 px-lg-5">
         <a class="navbar-brand mt-1" href="../index.html">
-          <img src="/images/logo.svg" alt="" />
+          <img src="../images/logo.svg" alt="" />
         </a>
         <button
           class="navbar-toggler"
@@ -96,7 +96,7 @@
     <header
       class="masthead"
       style="
-        background-image: url('/images/blogimages/austin-distel-wD1LRb9OeEo-unsplash.jpg');
+        background-image: url('../images/blogimages/austin-distel-wD1LRb9OeEo-unsplash.jpg');
         background-size: cover;
       "
     >
