--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <a class="nav-link" href="https://sahityaroy.hashnode.dev/" target="_blank">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/blog.html" target="_blank">Create a Blog</a>
+                            <a class="nav-link" href="./blog.html" target="_blank">Create a Blog</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#course">Courses</a>
