--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -8,8 +8,8 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Clean Blog - Start Bootstrap Theme</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <title>Blog 1</title>
+    <link rel="icon" type="image/x-icon" href="../images/favicon/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script
       src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
