--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -8,14 +8,14 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Clean Blog - Start Bootstrap Theme</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <title>Clean Blog </title>
+    <link rel="icon" type="image/x-icon" href="../images/favicon/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script
       src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="icon" type="image/x-icon" href="/images/favicon/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="../images/favicon/favicon.ico" />
     <!-- Google fonts-->
     <link
       href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic"
@@ -44,11 +44,7 @@
     <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
       <div class="container px-4 px-lg-5">
         <a class="navbar-brand mt-1" href="../index.html">
-<<<<<<< HEAD
           <img src="../images/logo.svg" alt="" />
-=======
-          <img src="/images/logo.svg" alt="" />
->>>>>>> c8145321ccba8cf4236f1723deaea13b5baa5897
         </a>
         <button
           class="navbar-toggler"
