--- a/blogs/blog5.html
+++ b/blogs/blog5.html
@@ -8,18 +8,14 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Clean Blog - Start Bootstrap Theme</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <title>Blog</title>
+    <link rel="icon" type="image/x-icon" href="../images/favicon/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script
       src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
       crossorigin="anonymous"
     ></script>
-<<<<<<< HEAD
     <link rel="icon" type="image/x-icon" href="../images/favicon/favicon.ico" />
-=======
-    <link rel="icon" type="image/x-icon" href="/images/favicon/favicon.ico" />
->>>>>>> c8145321ccba8cf4236f1723deaea13b5baa5897
     <!-- Google fonts-->
     <link
       href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic"
