--- a/blogs/blog6.html
+++ b/blogs/blog6.html
@@ -8,14 +8,14 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Clean Blog - Start Bootstrap Theme</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <title>Blog </title>
+    <link rel="icon" type="image/x-icon" href="../images/favicon/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script
       src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="icon" type="image/x-icon" href="/images/favicon/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="../images/favicon/favicon.ico" />
     <!-- Google fonts-->
     <link
       href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic"
