--- a/blog.html
+++ b/blog.html
@@ -189,6 +189,36 @@
                 </div>
               </a>
             </div>
+            
+            <div class="card">
+              <a href="./blogs/blog4.html">
+                <img
+                  class="card-img-top"
+                  src="./images/blogimages/h-heyerlein-ndja2LJ4IcM-unsplash.jpg"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">
+                   How to Become GFG Campus Mantri
+                  </h5>
+                  <p class="card-text">
+                   You’ll be recognized as the nominated “Mantri” of your campus and your duty will be to help the proletarians (Students) of your Constituency (College campus).
+Opportunity to work in proximity with one of the most dynamic digital Ed-tech platforms.
+Career counseling opportunity with the Head of the Parliament Mr. Sandeep Jain and other top Ministers (Mentors) of the Cabinet.
+Get a chance to be a part of Law making (idea originating and decision making policy for the company and get featured).
+Since you’ll be joining us in the Parliament, your opinion matters to us. You’ll get an opportunity to review the bill (upcoming online courses) and suggest the amendments required.
+You get early access to new online courses being launched by GeeksforGeeks. We are all ears for your review, feedback and suggestions.
+                  </p>
+                  <p class="card-text">
+                    <small class="text-muted"
+                      ><i class="fa fa-eye"></i>43<i class="fa fa-user"></i
+                      >admin<i class="fa fa-calendar-alt"></i>Oct 21,
+                      2021</small
+                    >
+                  </p>
+                </div>
+              </a>
+            </div>
             <div class="card">
               <a href="./blogs/blog3.html">
                 <img
