--- a/blog.html
+++ b/blog.html
@@ -111,7 +111,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="./blogs/blog5.html">
+              <a href="">
                 <img
                   class="card-img-top"
                   src="./images/blogimages/fotis-fotopoulos-DuHKoV44prg-unsplash.jpg"
@@ -189,9 +189,57 @@
                 </div>
               </a>
             </div>
-
             <div class="card">
               <a href="./blogs/blog4.html">
+                <img
+                  class="card-img-top"
+                  src="./images/blogimages/photo-1498050108023-c5249f4df085.jpg"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">
+                    How to choose a tech-stack in web development?
+                  </h5>
+                  <p class="card-text">
+                    The world has changed to a mobile-first era but even today, none of the applications could emerge as effective as the web-based apps. Surfacing on top of this is the prevalence of progressive web apps that perform functions identical to mobile apps. 
+                  </p>
+                  <p class="card-text">
+                    <small class="text-muted"
+                      ><i class="fa fa-eye"></i>43<i class="fa fa-user"></i
+                      >Rudramadhaba Mishra<i class="fa fa-calendar-alt"></i>Oct 22,
+                      2021</small
+                    >
+                  </p>
+                </div>
+              </a>
+            </div>
+            <div class="card">
+              <a href="./blogs/blog5.html">
+                <img
+                  class="card-img-top"
+                  src="./images/blogimages/blog5.jpg"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">
+                    How to Learn ReactJS in 2021?
+                  </h5>
+                  <p class="card-text">
+                    let’s talk about the developers who are already in the industry and working on some frontend part of the project. How do you feel when you are asked to write the same line of code at multiple places? How do you feel when you’re asked to add the same button on multiple pages?
+                  </p>
+                  <p class="card-text">
+                    <small class="text-muted"
+                      ><i class="fa fa-eye"></i>12430<i class="fa fa-user"></i
+                      >Rudramadhaba Mishra<i class="fa fa-calendar-alt"></i>Oct 22,
+                      2021</small
+                    >
+                  </p>
+                </div>
+              </a>
+            </div>
+
+            <div class="card">
+              <a href="">
                 <img
                   class="card-img-top"
                   src="./images/blogimages/h-heyerlein-ndja2LJ4IcM-unsplash.jpg"
@@ -251,7 +299,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="./blogs/blog4.html">
+              <a href="">
                 <img
                   class="card-img-top"
                   src="./images/blogimages/ray-rui-SyzQ5aByJnE-unsplash.jpg"
