--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     <!-- ** -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <style>
+     a{
+       text-align: center;
+     }
+    </style>
 </head>
 
 <body>
