--- a/blog.html
+++ b/blog.html
@@ -86,6 +86,32 @@
               <a href="./blogs/blog1.html">
                 <img
                   class="card-img-top"
+                  src="https://wac-cdn.atlassian.com/dam/jcr:ef9fe684-c6dc-4ba0-a636-4ef7bcfa11f1/New%20DevOps%20Loop%20image.png?cdnVersion=580 "
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">
+                    What is Devops ?
+                  </h5>
+                  <p class="card-text">
+                    DevOps is a set of practices, tools, and a cultural philosophy that automate and integrate the processes between software development and IT teams. It emphasizes team empowerment, cross-team communication and collaboration, and technology automation.
+
+                    The DevOps movement began around 2007 when the software development and IT operations communities raised concerns about the traditional software development model, where developers who wrote code worked apart from operations who deployed and supported the code. The term DevOps, a combination of the words development and operations, reflects the process of integrating these disciplines into one, continuous process.
+                  </p>
+                  <p class="card-text">
+                    <small class="text-muted"
+                      ><i class="fa fa-eye"></i>27<i class="fa fa-user"></i
+                      >admin<i class="fa fa-calendar-alt"></i>Oct 14,2022
+                      </small
+                    >
+                  </p>
+                </div>
+              </a>
+            </div>
+            <div class="card">
+              <a href="./blogs/blog1.html">
+                <img
+                  class="card-img-top"
                   src="./images/blogimages/austin-distel-wD1LRb9OeEo-unsplash.jpg "
                   alt="Card image cap"
                 />
