Linking issue fixed

--- a/blog.html
+++ b/blog.html
@@ -83,7 +83,7 @@
         <div class="container">
           <div class="card-columns">
             <div class="card">
-              <a href="./blogs/blog1.html">
+              <a href="https://www.atlassian.com/devops">
                 <img
                   class="card-img-top"
                   src="https://wac-cdn.atlassian.com/dam/jcr:ef9fe684-c6dc-4ba0-a636-4ef7bcfa11f1/New%20DevOps%20Loop%20image.png?cdnVersion=580 "
