--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
             <div class="row">
                 <div class="col-lg-5 col-md-12">
                     <div class="header-details">
-                        <h6>Are you ready to Learn?</h6>
-                        <h1>Learn With fun <br> on <span>any schedule</span></h1>
+                        <h6>ARE YOU READY TO LEARN?</h6>
+                        <h1>Learn With Fun <br> on <span>any schedule</span></h1>
                         <!-- <p>Now a days programming is one of the booming career industry needs good programmers so you have to learn programming</p> -->
                         <p>Now-a-days programming is one of the booming career in industry. It is profitable for one to
                             learn programming as there is an enormous demand for good programmers in the industry.</p>
@@ -676,7 +676,7 @@
                             programming free of cost so stay tuned with us and if you have any query then register
                             yourself.
                         </p>
-                        <a class="nav-link" href="https://www.youtube.com/channel/UCqXTIC8hmyigUtYGVykQsug">Let's
+                        <a class="nav-link nav-btn get-btn" href="https://www.youtube.com/channel/UCqXTIC8hmyigUtYGVykQsug">
                             Start</a>
                     </div>
                 </div>
