What is Kubernatics? added

--- a/blog.html
+++ b/blog.html
@@ -86,6 +86,38 @@
               <a href="https://www.atlassian.com/devops">
                 <img
                   class="card-img-top"
+                  src="https://res.cloudinary.com/canonical/image/fetch/f_auto,q_auto,fl_sanitize,w_250,h_195/https://assets.ubuntu.com/v1/767f38a4-kubernetes-stacked-color.svg"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">
+                    What are Kubernetes?
+                  </h5>
+                  <p class="card-text">
+                    Kubernetes, or k8s for short, is an open source platform pioneered by Google, which started as a simple container orchestration tool but has grown into a cloud native platform.
+
+                    It’s one of the most significant advancements in IT since the public cloud came to being in 2009, and has an unparalleled 5-year 30% growth rate in both market revenue and overall adoption.
+                  </p>
+                  <p class="card-text">
+                    <small class="text-muted"
+                      ><i class="fa fa-eye"></i>20<i class="fa fa-user"></i
+                      >admin<i class="fa fa-calendar-alt"></i>Oct 22,2022
+                      </small
+                    >
+                  </p>
+                </div>
+              </a>
+            </div>
+      <div class="container">
+        <div class="text-center mt-8">
+          <h1>BLOG</h1>
+        </div>
+        <div class="container">
+          <div class="card-columns">
+            <div class="card">
+              <a href="https://www.atlassian.com/devops">
+                <img
+                  class="card-img-top"
                   src="https://wac-cdn.atlassian.com/dam/jcr:ef9fe684-c6dc-4ba0-a636-4ef7bcfa11f1/New%20DevOps%20Loop%20image.png?cdnVersion=580 "
                   alt="Card image cap"
                 />
