--- a/blog.html
+++ b/blog.html
@@ -269,6 +269,30 @@
                 </div>
               </a>
             </div>
+            
+            <div class="card">
+              <a href="./blogs/blog5.html">
+                <img
+                  class="card-img-top"
+                  src="./images/blogimages/blog5.jpg"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Importance of blockchain</h5>
+                  <p class="card-text">
+                    Blockchain facilitates the verification and traceability of multistep transactions that require verification and traceability. It can ensure secure transactions, lower compliance expenses, and accelerate data transfer processing. Blockchain technology can aid in contract administration and product auditing.
+                    Public blockchains are accessible to anybody; private blockchains are only accessible to a limited number of users; and permissioned blockchains are a hybrid of public and private blockchains that anyone may access as long as they have permission from the administrators.
+                  </p>
+                  <p class="card-text">
+                    <small class="text-muted"
+                      ><i class="fa fa-eye"></i>12430<i class="fa fa-user"></i
+                      >Rudramadhaba Mishra<i class="fa fa-calendar-alt"></i>Oct
+                      22, 2021</small
+                    >
+                  </p>
+                </div>
+              </a>
+            </div>
 
             <div class="card">
               <a href="">
