--- a/contributor1.html
+++ b/contributor1.html
@@ -14,7 +14,7 @@
          <div class="lower-container">
             <div>
                <h3>Aakanksha Bhende</h3>
-               <h4>Btech CSE (contributor) </h4>
+               <h4>Btech CSE  </h4>
             </div>
             <div>
                <p>Thanks for your contribution in this project
